--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@sindresorhus/is": "^3.1.2",
     "char-regex": "^1.0.2",
-    "emojilib": "^2.4.0",
+    "emojilib": "3.0.10",
     "skin-tone": "^2.0.0"
   },
   "devDependencies": {
